--- a/src/main/webapp/statics/css/styles.css
+++ b/src/main/webapp/statics/css/styles.css
@@ -252,4 +252,6 @@ body .login_fields__submit input:hover {
   top: 0;
   bottom: 0;
   padding: 100px 40px 40px 40px;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
