--- a/src/main/webapp/views/customer/showcustomer.html
+++ b/src/main/webapp/views/customer/showcustomer.html
@@ -16,28 +16,14 @@
     <link href="../../statics/layui/css/layui.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="statics/images/favicon.ico" type="image/x-icon">
     <style type="text/css">
-
+        .expand {
+            opacity: 0.6;
+        }
     </style>
 </head>
 <body>
 <div class="showcontent">
 <ul class="layui-timeline">
-    <li class="layui-timeline-item">
-        <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
-        <div class="layui-timeline-content layui-text">
-            <h3 class="layui-timeline-title">8月18日</h3>
-            <p>
-                layui 2.0 的一切准备工作似乎都已到位。发布之弦，一触即发。
-                <br>不枉近百个日日夜夜与之为伴。因小而大，因弱而强。
-                <br>无论它能走多远，抑或如何支撑？至少我曾倾注全心，无怨无悔 <i class="layui-icon"></i>
-            </p>
-        </div>
-    </li>
-    <div id="test">
-
-
-    </div>
-
 
 </ul>
 </div>
